fix(lead): Alignment inside panels

--- a/styleguide/_themes/derek/scss/patterns/panels.scss
+++ b/styleguide/_themes/derek/scss/patterns/panels.scss
@@ -7,6 +7,11 @@
   justify-content: center;
   min-width: 1px;
   width: 100%;
+
+  .lead,
+  .lead-wrapper {
+    text-align: left;
+  }
 }
 
 .panel-flexVertical {
